# MatrixEngine

./: .gitignore  .gitmodules  CMakeLists.txt  MatrixEngine.sln  build_windows_sln.bat  readme.md  readmeDoc.md
Engine/Source/Runtime/Container/: Array.cpp  Array.h  Array.inl  BinaryTree.h  BitArray.h  CMakeLists.txt  Container.h  Delegate.h  Hash.cpp  Hash.h  List.cpp  List.h  Map.cpp  Map.h  Map.inl  Match.cpp  Match.h  Queue.cpp  Queue.h  SafeQueue.h  Stack.h  String.cpp  String.h  dllmain.cpp
Engine/Source/Runtime/Core/: CMakeLists.txt  Core.cpp  Core.h  File.cpp  File.h  Image.h  Log.cpp  Log.h  MTXCore.cpp  MTXCore.h  MTXImage.cpp  MTXMemoryManager.cpp  MTXMemoryManager.h  MTXSingleton.h  MTXTimer.cpp  MTXTimer.h  MemoryManager.cpp  MemoryManager.h  Platform.h  Singleton.h  Synchronize.cpp  Synchronize.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  dllmain.cpp
Engine/Source/Runtime/Core/Container/: Array.cpp  Array.h  BinaryTree.cpp  BitArray.cpp  Container.h  List.h  Map.h  Queue.h  SafeQueue.h  String.h
Engine/Source/Runtime/Core/System/: Image.cpp  Image.h  MemoryManager.h  Singleton.h  dllmain.cpp
Engine/Source/Runtime/Function/: CMakeLists.txt  EngineInit.cpp  EngineInit.h  FunctionCore.h  Resource.cpp  Resource.h  ResourceMacro.h  ResourceManager.cpp  ResourceManager.h
Engine/Source/Runtime/Function/Asyn/: ASYNLoader.cpp  ASYNLoader.h  AsynStream.cpp  AsynStream.h  EngineThread.cpp  EngineThread.h  Monitor.cpp  Monitor.h  RenderThread.cpp  RenderThread.h  UpdateThread.cpp  UpdateThread.h
Engine/Source/Runtime/Function/Controller/: 1stCameraController.cpp  1stCameraController.h  Controller.cpp  Controller.h  Controller.inl  FreeCameraController.cpp  FreeCameraController.h
Engine/Source/Runtime/Function/Controller/AnimTree/: AdditiveBlend.cpp  AdditiveBlend.h  AnimAtom.cpp  AnimAtom.h  AnimBaseFunction.cpp  AnimBaseFunction.h  AnimBlendFunction.cpp  AnimBlendFunction.h  AnimFunction.cpp  AnimFunction.h  AnimMainFunction.cpp  AnimMainFunction.h  AnimSequenceFunc.cpp  AnimSequenceFunc.h  AnimSet.cpp  AnimSet.h  AnimTree.cpp  AnimTree.h  OneParamAnimBlend.cpp  OneParamAnimBlend.h  OneParamImmediateAnimBlend.cpp  OneParamImmediateAnimBlend.h  OneParamSmoothAnimBlend.cpp  OneParamSmoothAnimBlend.h  OneParamSmoothAnimBlendSequence.cpp  OneParamSmoothAnimBlendSequence.h  PartialAnimBlend.cpp  PartialAnimBlend.h  RectAnimBlend.cpp  RectAnimBlend.h  TimeEvent.cpp  TimeEvent.h  TwoParamAnimBlend.cpp  TwoParamAnimBlend.h  TwoParamAnimBlendSequence.cpp  TwoParamAnimBlendSequence.h
Engine/Source/Runtime/Function/Controller/Morph/: MorphSet.cpp  MorphSet.h
Engine/Source/Runtime/Function/Core/: Config.cpp  Config.h  GraphicInclude.h  NVCompression.cpp  NVCompression.h  ObjName.cpp  Object.cpp  Object.h  Pointer.h  Pointer.inl  Profiler.cpp  Profiler.h  PutNode.cpp  PutNode.h  Reference.cpp  Reference.h  Resource.cpp  Resource.h  ResourceMacro.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.inl  Rtti.cpp  Rtti.h  Rtti.inl  Type.h  Variant.cpp  Variant.h
Engine/Source/Runtime/Function/Core/Meta/: InitialMacro.h  ObjName.cpp  ObjName.h  Priority.cpp  Priority.h  PriorityMacro.h  Rtti.cpp  Rtti.h  Rtti.inl  Rttimacro.h
Engine/Source/Runtime/Function/Core/Stream/: AsynStream.cpp  AsynStream.h  CustomArchiveObject.cpp  CustomArchiveObject.h  EditorProperty.cpp  EditorProperty.h  (+10 more)
Engine/Source/Runtime/Function/Material/: Material.cpp  Material.h  ShaderStringFactory.cpp  ShaderStringFactory.h  SortLight.h
Engine/Source/Runtime/Function/Meta/: Config.cpp  Config.h  CustomArchiveObject.cpp  CustomArchiveObject.h  EditorProperty.cpp  EditorProperty.h  EnumTrans.cpp  EnumTrans.h  InitialMacro.h  NVCompression.cpp  ObjName.cpp  ObjName.h  Object.cpp  Object.h  Pointer.h  Pointer.inl  Priority.cpp  Priority.h  PriorityMacro.h  Profiler.cpp  Profiler.h  Property.h  PropertyMarco.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Rtti.cpp  Rtti.h  Rttimacro.h  Stream.cpp  Stream.h  StreamingManager.cpp  StreamingManager.h  StreamingType.cpp  StreamingType.h  Transform.cpp  Transform.h  Transform.inl  Type.h  (+2 more)
Engine/Source/Runtime/Function/Node/: DynamicBufferGeometry.cpp  DynamicBufferGeometry.h  Geometry.cpp  Geometry.h  GeometryNode.cpp  GeometryNode.h  InstanceGeometry.cpp  InstanceGeometry.h  MeshNode.cpp  MeshNode.h  Node.cpp  Node.h  Node.inl  SocketNode.cpp  SocketNode.h  SwitchNode.cpp  SwitchNode.h  UseBuffer.cpp  UseBuffer.h
Engine/Source/Runtime/Function/Pass/: IndirectRenderPass.cpp  IndirectRenderPass.h  LightFunPass.cpp  LightFunPass.h  MaterialPass.cpp  MaterialPass.h  NormalDepthPass.cpp  NormalDepthPass.h  Pass.cpp  Pass.h  PostEffectPass.cpp  PostEffectPass.h  PreZPass.cpp  PreZPass.h  ShadowPass.cpp  ShadowPass.h
Engine/Source/Runtime/Function/PostEffect/: CommonPostEffect.cpp  CommonPostEffect.h  PEBeginFunction.cpp  PEBeginFunction.h  PEEndFunction.cpp  PEEndFunction.h  PEMaterial.cpp  PEMaterial.h  PostEffectFunction.cpp  PostEffectFunction.h  PostEffectMacro.h  PostEffectSet.cpp  PostEffectSet.h
Engine/Source/Runtime/Function/Render/: Bind.cpp  Bind.h  BindLockInterface.cpp  BindLockInterface.h  DebugDraw.cpp  DebugDraw.h  Font.cpp  Font.h  InheritBind.cpp  InheritBind.h  MemBind.cpp  MemBind.h  NullRenderer.cpp  NullRenderer.h  Renderer.cpp  Renderer.h  Renderer.inl  Slot.cpp  Slot.h
Engine/Source/Runtime/Function/World/: SceneMap.cpp  SceneMap.h  World.cpp  World.h
Engine/Source/Runtime/Math/: CMakeLists.txt  CMathInterface.h  EngineMath.cpp  EngineMath.h  Math.cpp  MathDefination.h  MathInterface.h  Matrix3.cpp  Matrix3.h  Matrix3.inl  Matrix3X3.cpp  Matrix3X3.h  Matrix3X3.inl  Matrix3X3W.cpp  Matrix3X3W.h  Matrix4.cpp  Matrix4.h  Matrix4.inl  OtherMath.cpp  OtherMath.h  PC_SSE.h  Platform.h  Quat.cpp  Quat.h  Transform.cpp  Transform.h  Transform.inl  VSMath.cpp  VSMath.h  VSMatrix3X3.cpp  VSMatrix3X3.h  VSMatrix3X3.inl  VSMatrix3X3W.cpp  VSMatrix3X3W.h  VSMatrix3X3W.inl  VSPC_SSE.h  VSQuat.cpp  VSVector2.cpp  VSVector2.h  VSVector3.cpp  (+15 more)
Samples/Demo02/: CMakeLists.txt  FileDemo.json  Source.cpp  Source1.cpp
(+428 files in other folders)
